--- a/20230203/css/main.css
+++ b/20230203/css/main.css
@@ -57,12 +57,6 @@ main > section:not(:nth-child(1)){
   background:none !important;
 }
 
-#buy, #cs{
-  background:#ccc;
-  margin:50px 0px;
-  height:800px;
-}
-
 /* TOP3 섹션 */
 #top3 {position: relative;}
 #top3 > h2 {font-size: 48px;text-align: center;font-weight: 900;}
@@ -312,6 +306,7 @@ main > section:not(:nth-child(1)){
 #event > article > ul > li > a {}
 #event > article > ul > li > a > img {height: 100%;}
 
+
 /* 모달 서식 */
 .modal{
   width:100%;height:100%;
@@ -340,4 +335,157 @@ main > section:not(:nth-child(1)){
 }
 .m_inner > p > label[for=ch]{
   color:var(--t-color01);
+}
+
+/* 캐스퍼 구매 */
+#buy{  text-align: center;}
+#buy > h3{
+  font-size:24px;
+  font-weight:500;
+  padding: 60px 0px 50px 0px;
+}
+.t_color03{
+  color:var(--t-color03);
+}
+
+#buy ul{
+  width:1000px;
+  margin:30px auto;
+  display:flex;
+  justify-content:space-around;
+  flex-wrap:wrap;
+}
+#buy ul > li{
+  width:33.3%;
+  margin-bottom:60px;
+}
+#buy > ul > li h4{
+  font-size: 16px;
+  font-weight: bold;
+}
+#buy ul > li img {
+  width: 70px;
+  padding: 15px 0px;
+}
+.p03 { line-height: 20px;}
+#buy iframe{
+  width:1000px;
+  height:560px;
+  border:none;
+}
+
+/* 고객지원 */
+#cs{
+  background:#ececec;
+}
+#cs h2{margin-bottom:40px;}
+#cs > article{
+  width:1200px;
+  margin:0px auto;
+  background:#fff;
+  padding-bottom:40px;
+}
+.clear::after{
+  display:block;
+  content:"";
+  clear:both;
+}
+#cs article h3{
+  font-size:18px;
+  text-align:center;
+  padding:60px 0px 20px 0px;
+  font-weight:bold;
+}
+.ars_left, .ars_right{
+  width:50%;
+  background:#fff;
+  padding:20px 30px;
+  box-sizing: border-box;
+  float:left;
+  position:relative;
+  display:flex;
+  justify-content:center;
+}
+.ars_left::after{
+  width:1px;height:200px;
+  background:#ccc;
+  display:block;
+  content:"";
+  position:absolute;right:0px;top:0px;
+}
+
+.cs_p{
+  width: 175px;
+  text-align: center;
+  /* display:inline-block; */
+}
+.cs_p strong {
+  font-weight: 500;
+  font-size: var(--f-size01);
+}
+.link01 {
+  color:var(--t-color03);
+  line-height: 30px;
+}
+.link01::after{
+  content: " >";
+  color:var(--t-color03);
+}
+.car, .member{
+  display:inline-block;
+  width:75px;height:46px;
+  background-image: url("../images/bg-support-ars.png");
+  text-indent:-9999px;
+}
+.car{transform:translateY(50px);}
+.member{
+  width:70px;
+  background-position:70px 0px;
+  transform:translateY(20px);
+}
+
+#cs dl {
+  padding-left: 20px;
+  line-height: 22px;
+}
+#cs dl > dt {font-weight: bold;}
+#cs dl > dd {color: #6d6d6d;}
+
+.cs_etc{
+  width:1200px;
+  margin:15px auto;
+  display:flex;
+  justify-content:space-between;
+}
+.cs_etc > li{
+  width: 290px;
+  height: 275px;
+  background: #fff;
+  padding: 0px 60px 10px 60px;
+  text-align:center;
+  position:relative;
+}
+.cs_etc > li > h3{
+  font-size:var(--f-size01);
+  text-align:left;
+  font-size:18px;
+  padding:60px 0px 20px 0px;
+  font-weight:bold;
+}
+.cs_etc > li > p{
+  text-align:left;
+  line-height:20px;
+}
+.cs_etc > li:last-child img{padding-top:18px;}
+.btn01{
+  background-color:var(--bg-color02);
+  color:#fff;
+  padding:8px 25px;
+  position: absolute; bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.ran_banner {
+  text-align: center;
 }
